:sparkles: Get all the articles matching the searched text

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "ecmaVersion": 11
   },
   "rules": {
-    "eol-last":"error"
+    "eol-last":"error",
+    "implicit-arrow-linebreak": "off"
   }
 }
