:lipstick: Show date and size of articles and change page style

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,13 @@
   },
   "rules": {
     "eol-last":"error",
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "object-curly-newline": [
+      "error",
+      {
+        "consistent": true,
+        "multiline": true
+      }
+    ]
   }
 }
